Modifi(Vista, Controlador) - Subiendo arreglos finales (jar)